--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Sosyal Bağlantılar – Dark + 30x30 Grid + Işık + Yanıp Sönen Noktalar (bilibili yok)</title>
+<title>Unifyboss Rhino Plugin</title>
 <style>
   :root{
     --size: 88px;
