--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
   <canvas id="lightgrid" aria-hidden="true"></canvas>
 
   <main class="wrap">
-    <h1>Sosyal Platform Bağlantıları</h1>
-    <p class="note">Linkler bağlandı. Logolar <strong>renkli</strong> ve tüm efektler logo rengine göre tepki veriyor. WeChat için tıklayınca ID panoya kopyalanır; QQ tıklayınca sohbet sayfası açılır.</p>
+    <h1>Welcome</h1>
+    <p class="note"></p>
 
     <ul class="socials">
       <li>
