--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Sosyal Bağlantılar – Dark + Grid + Işık + QR Balonu (Renkli) + Telif</title>
+<title>Welcome!</title>
 <style>
   :root{
     --size: 88px;
@@ -314,7 +314,7 @@
 
   <main class="wrap">
     <h1>Sosyal Platform Bağlantıları</h1>
-    <p class="note">Bir ikonun üzerine gelince, altta markanın renginde <strong>liquid balon</strong> + <strong>renkli QR</strong> görünür.</p>
+    <p class="note"></p>
 
     <ul class="socials">
       <li>
