--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Welcome!</title>
+<title>UnifyBoss Rhino</title>
 <style>
   :root{
     --size: 88px;
@@ -313,7 +313,7 @@
   <canvas id="lightgrid" aria-hidden="true"></canvas>
 
   <main class="wrap">
-    <h1>Sosyal Platform Bağlantıları</h1>
+    <h1>Welcome!</h1>
     <p class="note"></p>
 
     <ul class="socials">
