--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
       </li>
 
       <li>
-        <a class="icon whatsapp" data-qr="https://chat.whatsapp.com/Glz8vLqugv05PpcrINlpKI" target="_blank" rel="noopener" aria-label="WhatsApp">
+        <a class="icon whatsapp" data-qr="https://chat.whatsapp.com/Glz8vLqugv05PpcrINlpKI" href="https://chat.whatsapp.com/Glz8vLqugv05PpcrINlpKI" target="_blank" rel="noopener" aria-label="WhatsApp">
           <img class="logo" alt="WhatsApp logosu" src="https://cdn.simpleicons.org/whatsapp/25D366" />
         </a>
       </li>
